--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,7 +65,9 @@ website:
 
 format:
   html:
-    theme: [litera, assets/styles/styles.scss]
+    theme: 
+      - litera
+      - assets/styles/styles.scss
     fontsize: 12pt
     page-layout: full
     link-external-newwindow: true
